--- a/src/language_JP.properties
+++ b/src/language_JP.properties
@@ -14,7 +14,7 @@ Breakpoint=ブレークポイント
 Bochs=Bochs
 Stack=スタック 
 
-File=ファイル 
+File=ファイル
 Exit=終了 
 Start_bochs=スタートのbochs 
 Stop_bochs=停止のbochs 
@@ -34,6 +34,7 @@ Help=ヘルプ
 About_us=About us
 
 Unable_to_start_bochs=bochsを起動することができません 
+Unable_to_start_qemu=qemuを起動することができません 
 
 Step=ステップ 
 Update=更新 
@@ -101,6 +102,7 @@ Load_breakpoint_at_startup =ブート負荷のブレークポイント
 Update_status_after_bochs_command =入力のbochsコマンドのすべての状態を更新する
 What_panel_will_update_after_fast_step_buttonは="クイック"次の状態を更新するボタンをクリックステップ
 Tips_you_specified_a_wrong_path_of_bochs=のヒント：あなたのbochsの誤ったパスを指定
+Tips_you_specified_a_wrong_path_of_qemu=のヒント：あなたのqemuの誤ったパスを指定
 System=システム
 Load_Elf=ロードマップファイル
 Step_over=Step over
