--- a/src/language_en_US.properties
+++ b/src/language_en_US.properties
@@ -34,6 +34,7 @@ Help=Help
 About_us=About us
 
 Unable_to_start_bochs=Unable to start bochs
+Unable_to_start_qemu=Unable to start qemu
 
 Step=Step
 Nexti=Next
@@ -100,6 +101,7 @@ Load_breakpoint_at_startup=Load breakpoint at startup
 Update_status_after_bochs_command=Update status after bochs command
 What_panel_will_update_after_fast_step_button=What panel will update after "fast step" button
 Tips_you_specified_a_wrong_path_of_bochs=Tips : you specified a wrong path of bochs
+Tips_you_specified_a_wrong_path_of_qemu=Tips : you specified a wrong path of qemu
 System=System
 Load_Elf=Load Elf
 Step_over=Step over
