--- a/src/language_zh_CN.properties
+++ b/src/language_zh_CN.properties
@@ -34,6 +34,7 @@ Help=帮助
 About_us=简介
 
 Unable_to_start_bochs=无法启动Bochs
+Unable_to_start_qemu=无法启动Qemu
 
 Step=单步
 Nexti=C单步
@@ -102,6 +103,7 @@ Load_breakpoint_at_startup=启动时加载断点
 Update_status_after_bochs_command=输入bochs命令后更新所有状态
 What_panel_will_update_after_fast_step_button=“快速单步”按钮更新以下状态
 Tips_you_specified_a_wrong_path_of_bochs=提示 : 您指定错误的bochs路径
+Tips_you_specified_a_wrong_path_of_qemu=提示 : 您指定错误的qemu路径
 System=系统
 Load_Elf=加载Elf文件
 Step_over=单步越过
