--- a/src/language_zh_TW.properties
+++ b/src/language_zh_TW.properties
@@ -34,6 +34,7 @@ Help=幫助
 About_us=簡介
 
 Unable_to_start_bochs=無法啟動Bochs
+Unable_to_start_qemu=無法啟動Qemu
 
 Step=單步
 Nexti=C單步
@@ -102,6 +103,7 @@ Load_breakpoint_at_startup=啟動時加載斷點
 Update_status_after_bochs_command=輸入bochs命令後更新所有狀態
 What_panel_will_update_after_fast_step_button=“快速單步”按鈕更新以下狀態
 Tips_you_specified_a_wrong_path_of_bochs=提示 : 您指定錯誤的bochs路徑
+Tips_you_specified_a_wrong_path_of_qemu=提示 : 您指定錯誤的qemu路徑
 System=系统
 Load_Elf=加载Elf文件
 Step_over=单步越过
