--- a/src/language_KR.properties
+++ b/src/language_KR.properties
@@ -34,6 +34,7 @@ Help=도움말
 About_us=소개 
 
 Unable_to_start_bochs=bochs를 시작할 수없습니다 
+Unable_to_start_qemu=qemu를 시작할 수없습니다 
 
 Step=단계 
 Update=업데이트 
@@ -100,4 +101,18 @@ Fast_Step = 빠른 단계
 Load_breakpoint_at_startup = 부트로드 중단점
 Update_status_after_bochs_command = 입력 bochs 명령은 모든 상태를 업데이 트하려면
 What_panel_will_update_after_fast_step_button는 = "빠른"다음 상태를 업데이 트하는 단추 단계
-Tips_you_specified_a_wrong_path_of_bochs=팁 : 당신이 bochs의 잘못된 경로를 지정
+Tips_you_specified_a_wrong_path_of_qemu=팁 : 당신이 qemu의 잘못된 경로를 지정
+System=System
+Load_Elf=Load Elf
+Step_over=Step over
+Step_over_10_times=Step over 10 times
+Step_over_100_times=Step over 100 times
+Step_over_N_times=Step over N times
+Project=Project
+Functions=Functions
+ASM/C=ASM/C
+Raw=Raw
+Map=Map
+Raw_source=Raw files
+Structure=Structure
+Profile_and_Sampling=Profiling & sampling
