--- a/src/language_JP.properties
+++ b/src/language_JP.properties
@@ -77,7 +77,7 @@ PauseBochsExe=Please put PauseBochs.exe and StopBochs.exe to the same directory 
 NdisasmExe=Please put ndisasm.exe to the same directory of peter-bochs-debugger.jar
 Hit=ヒット 
 No=品番
-Title=Peter-Bochs Debugger
+Title=General Kernel Debugger
 Address=住所 
 Instruction=命令 
 Bytes=バイト 
