--- a/src/language_KR.properties
+++ b/src/language_KR.properties
@@ -77,7 +77,7 @@ PauseBochsExe=Please put PauseBochs.exe and StopBochs.exe to the same directory 
 NdisasmExe=Please put ndisasm.exe to the same directory of peter-bochs-debugger.jar
 Hit=치다 
 No=번호
-Title=Peter-Bochs Debugger
+Title=General Kernel Debugger
 Address=주소 
 Instruction=명령 
 Bytes=바이트 
