--- a/src/language_zh_CN.properties
+++ b/src/language_zh_CN.properties
@@ -78,7 +78,7 @@ PauseBochsExe=请把PauseBochs.exe和StopBochs.exe放在和peter-bochs-debugger.
 NdisasmExe=请把ndisasm.exe放在和peter-bochs-debugger.jar同一个的目录下
 Hit=命中次数
 No=号数
-Title=彼得调试器
+Title=通用内核调试器
 Address=地址
 Line=行号
 Source=代码
