--- a/src/language_zh_TW.properties
+++ b/src/language_zh_TW.properties
@@ -78,7 +78,7 @@ PauseBochsExe=請把PauseBochs.exe和StopBochs.exe放在和peter-bochs-debugger.
 NdisasmExe=請把ndisasm.exe放在和peter-bochs-debugger.jar同一個的目錄下
 Hit=命中次數
 No=號數
-Title=彼得調試器
+Title=通用內核調試器
 Address=地址
 Instruction=指令
 Bytes=字節
