--- a/src/language_en_US.properties
+++ b/src/language_en_US.properties
@@ -78,7 +78,7 @@ PauseBochsExe=Please put PauseBochs.exe and StopBochs.exe to the same directory 
 NdisasmExe=Please put ndisasm.exe to the same directory of peter-bochs-debugger.jar
 Hit=Hit
 No=No
-Title=Peter-Bochs Debugger
+Title=General Kernel Debugger
 Address=Address
 Line=Line
 Source=Source
