--- a/src/language_KR.properties
+++ b/src/language_KR.properties
@@ -16,8 +16,8 @@ Stack=스택
 
 File=파일 
 Exit=종료 
-Start_bochs=시작 bochs 
-Stop_bochs=중지 bochs 
+Start=시작vm 
+Stop=중지vm 
 Run_bochs=실행 bochs 
 Pause_bochs=일시 정지 bochs 
 Update_bochs_status=업데이트 상태를 bochs 
