--- a/src/language_en_US.properties
+++ b/src/language_en_US.properties
@@ -16,8 +16,8 @@ Stack=Stack
 
 File=File
 Exit=Exit
-Start_bochs=Start
-Stop_bochs=Stop
+Start=Start
+Stop=Stop
 Run_bochs=Run
 Pause_bochs=Pause
 Update_bochs_status=Update status
