--- a/src/language_zh_CN.properties
+++ b/src/language_zh_CN.properties
@@ -1,121 +1,121 @@
-Disassemble=反汇编
+Disassemble=\u53cd\u6c47\u7f16
 
-Memory=内存
-GDT=全域描述符表
-LDT=区段描述符表
-IDT=中断描述符表
-Register=寄存器
-Bochs_control=Bochs控制
-History=历史
-Paging=分页
-Table_translate=表翻译
-Instruction=指令
-Breakpoint=断点
+Memory=\u5185\u5b58
+GDT=\u5168\u57df\u63cf\u8ff0\u7b26\u8868
+LDT=\u533a\u6bb5\u63cf\u8ff0\u7b26\u8868
+IDT=\u4e2d\u65ad\u63cf\u8ff0\u7b26\u8868
+Register=\u5bc4\u5b58\u5668
+Bochs_control=Bochs\u63a7\u5236
+History=\u5386\u53f2
+Paging=\u5206\u9875
+Table_translate=\u8868\u7ffb\u8bd1
+Instruction=\u6307\u4ee4
+Breakpoint=\u65ad\u70b9
 Bochs=Bochs
-Stack=堆栈
+Stack=\u5806\u6808
 
-File=文件
-Exit=退出
-Start_bochs=开始Bochs
-Stop_bochs=停止Bochs
-Run_bochs=运行Bochs
-Pause_bochs=暂停Bochs
-Update_bochs_status=更新Bochs状态
+File=\u6587\u4ef6
+Exit=\u9000\u51fa
+Start=\u5f00\u59cbvm
+Stop=\u505c\u6b62vm
+Run_bochs=\u8fd0\u884cBochs
+Pause_bochs=\u6682\u505cBochs
+Update_bochs_status=\u66f4\u65b0Bochs\u72b6\u6001
 
-Font=字体
-Size=大小
+Font=\u5b57\u4f53
+Size=\u5927\u5c0f
 
-Language=语言
-English=英语
-Traditional_chinese=繁体中文
-Simplified_chinese=简体中文
+Language=\u8bed\u8a00
+English=\u82f1\u8bed
+Traditional_chinese=\u7e41\u4f53\u4e2d\u6587
+Simplified_chinese=\u7b80\u4f53\u4e2d\u6587
 
-Help=帮助
-About_us=简介
+Help=\u5e2e\u52a9
+About_us=\u7b80\u4ecb
 
-Unable_to_start_bochs=无法启动Bochs
-Unable_to_start_qemu=无法启动Qemu
+Unable_to_start_bochs=\u65e0\u6cd5\u542f\u52a8Bochs
+Unable_to_start_qemu=\u65e0\u6cd5\u542f\u52a8Qemu
 
-Step=单步
-Nexti=C单步
-Update=更新
+Step=\u5355\u6b65
+Nexti=C\u5355\u6b65
+Update=\u66f4\u65b0
 
-Add=增加
-Del=删除
-Refresh=刷新
-Enable=启用
-Disable=禁用
-Save=保存
-Load=载入
-Pause_history=暂停历史
-Page_directory=分页目录
-Page_table=分页表
-From=从
-To=至
-Offset=偏移量
-String=字符串
-Go=转到
-Search_memory=搜索内存
+Add=\u589e\u52a0
+Del=\u5220\u9664
+Refresh=\u5237\u65b0
+Enable=\u542f\u7528
+Disable=\u7981\u7528
+Save=\u4fdd\u5b58
+Load=\u8f7d\u5165
+Pause_history=\u6682\u505c\u5386\u53f2
+Page_directory=\u5206\u9875\u76ee\u5f55
+Page_table=\u5206\u9875\u8868
+From=\u4ece
+To=\u81f3
+Offset=\u504f\u79fb\u91cf
+String=\u5b57\u7b26\u4e32
+Go=\u8f6c\u5230
+Search_memory=\u641c\u7d22\u5185\u5b58
 
-Cancel=取消
-Search=搜索
-Finished=完成
-Physical_address=物理地址
-Linear_address=线性地址
-Virtual_address=虚拟地址
-Searching_these_bytes=搜索这些字节
-Bytes=字节
-Clear=清除
-Address_translate=地址转换
-Convert=转换
-Segment_no=段号
-PD_No=页目录号
-PT_No=页表号
-Search_address=搜索地址
-Address_type=地址类型
-Error=错误
-PauseBochsExe=请把PauseBochs.exe和StopBochs.exe放在和peter-bochs-debugger.jar同一个的目录下
-NdisasmExe=请把ndisasm.exe放在和peter-bochs-debugger.jar同一个的目录下
-Hit=命中次数
-No=号数
-Title=通用内核调试器
-Address=地址
-Line=行号
-Source=代码
-Real_mode=实模式
-Protected_mode=保护模式
-Latest_version_available=最新版本可以下载
-Download_url=下载地址
-ELF_dump=ELF解码
-Download_url=下载地址
-ELF_dump=ELF解码
-Field=字段
-Value=值
-Base_address=基地址
-PDE=页目录
-PTE=页表项
-Dump_page_directory=解码页目录
-Descriptor=描述符表
-Info=信息
-Setting=设定
-Fast_Step=快速单步
-Load_breakpoint_at_startup=启动时加载断点
-Update_status_after_bochs_command=输入bochs命令后更新所有状态
-What_panel_will_update_after_fast_step_button=“快速单步”按钮更新以下状态
-Tips_you_specified_a_wrong_path_of_bochs=提示 : 您指定错误的bochs路径
-Tips_you_specified_a_wrong_path_of_qemu=提示 : 您指定错误的qemu路径
-System=系统
-Load_Elf=加载Elf文件
-Step_over=单步越过
-Step_over_10_times=单步越过10次
-Step_over_100_times=单步越过100次
-Step_over_N_times=单步越过N次
-Project=项目
-Functions=函数
-ASM/C=ASM/C代码
-Source=代码
-Raw=原始文件
-Map=图
-Raw_source=原始代码
-Structure=结构
-Profile_and_Sampling=分析&取样
+Cancel=\u53d6\u6d88
+Search=\u641c\u7d22
+Finished=\u5b8c\u6210
+Physical_address=\u7269\u7406\u5730\u5740
+Linear_address=\u7ebf\u6027\u5730\u5740
+Virtual_address=\u865a\u62df\u5730\u5740
+Searching_these_bytes=\u641c\u7d22\u8fd9\u4e9b\u5b57\u8282
+Bytes=\u5b57\u8282
+Clear=\u6e05\u9664
+Address_translate=\u5730\u5740\u8f6c\u6362
+Convert=\u8f6c\u6362
+Segment_no=\u6bb5\u53f7
+PD_No=\u9875\u76ee\u5f55\u53f7
+PT_No=\u9875\u8868\u53f7
+Search_address=\u641c\u7d22\u5730\u5740
+Address_type=\u5730\u5740\u7c7b\u578b
+Error=\u9519\u8bef
+PauseBochsExe=\u8bf7\u628aPauseBochs.exe\u548cStopBochs.exe\u653e\u5728\u548cpeter-bochs-debugger.jar\u540c\u4e00\u4e2a\u7684\u76ee\u5f55\u4e0b
+NdisasmExe=\u8bf7\u628andisasm.exe\u653e\u5728\u548cpeter-bochs-debugger.jar\u540c\u4e00\u4e2a\u7684\u76ee\u5f55\u4e0b
+Hit=\u547d\u4e2d\u6b21\u6570
+No=\u53f7\u6570
+Title=\u901a\u7528\u5185\u6838\u8c03\u8bd5\u5668
+Address=\u5730\u5740
+Line=\u884c\u53f7
+Source=\u4ee3\u7801
+Real_mode=\u5b9e\u6a21\u5f0f
+Protected_mode=\u4fdd\u62a4\u6a21\u5f0f
+Latest_version_available=\u6700\u65b0\u7248\u672c\u53ef\u4ee5\u4e0b\u8f7d
+Download_url=\u4e0b\u8f7d\u5730\u5740
+ELF_dump=ELF\u89e3\u7801
+Download_url=\u4e0b\u8f7d\u5730\u5740
+ELF_dump=ELF\u89e3\u7801
+Field=\u5b57\u6bb5
+Value=\u503c
+Base_address=\u57fa\u5730\u5740
+PDE=\u9875\u76ee\u5f55
+PTE=\u9875\u8868\u9879
+Dump_page_directory=\u89e3\u7801\u9875\u76ee\u5f55
+Descriptor=\u63cf\u8ff0\u7b26\u8868
+Info=\u4fe1\u606f
+Setting=\u8bbe\u5b9a
+Fast_Step=\u5feb\u901f\u5355\u6b65
+Load_breakpoint_at_startup=\u542f\u52a8\u65f6\u52a0\u8f7d\u65ad\u70b9
+Update_status_after_bochs_command=\u8f93\u5165bochs\u547d\u4ee4\u540e\u66f4\u65b0\u6240\u6709\u72b6\u6001
+What_panel_will_update_after_fast_step_button=\u201c\u5feb\u901f\u5355\u6b65\u201d\u6309\u94ae\u66f4\u65b0\u4ee5\u4e0b\u72b6\u6001
+Tips_you_specified_a_wrong_path_of_bochs=\u63d0\u793a : \u60a8\u6307\u5b9a\u9519\u8bef\u7684bochs\u8def\u5f84
+Tips_you_specified_a_wrong_path_of_qemu=\u63d0\u793a : \u60a8\u6307\u5b9a\u9519\u8bef\u7684qemu\u8def\u5f84
+System=\u7cfb\u7edf
+Load_Elf=\u52a0\u8f7dElf\u6587\u4ef6
+Step_over=\u5355\u6b65\u8d8a\u8fc7
+Step_over_10_times=\u5355\u6b65\u8d8a\u8fc710\u6b21
+Step_over_100_times=\u5355\u6b65\u8d8a\u8fc7100\u6b21
+Step_over_N_times=\u5355\u6b65\u8d8a\u8fc7N\u6b21
+Project=\u9879\u76ee
+Functions=\u51fd\u6570
+ASM/C=ASM/C\u4ee3\u7801
+Source=\u4ee3\u7801
+Raw=\u539f\u59cb\u6587\u4ef6
+Map=\u56fe
+Raw_source=\u539f\u59cb\u4ee3\u7801
+Structure=\u7ed3\u6784
+Profile_and_Sampling=\u5206\u6790&\u53d6\u6837
