--- a/src/language_zh_TW.properties
+++ b/src/language_zh_TW.properties
@@ -1,121 +1,121 @@
-Disassemble=反匯編
+Disassemble=\u53cd\u532f\u7de8
 
-Memory=記憶體
-GDT=全域描述符表
-LDT=區段描述符表
-IDT=中斷描述符表
-Register=寄存器
-Bochs_control=Bochs控制
-History=歷史
-Paging=分頁
-Table_translate=表翻譯
-Instruction=指令
-Breakpoint=斷點
+Memory=\u8a18\u61b6\u9ad4
+GDT=\u5168\u57df\u63cf\u8ff0\u7b26\u8868
+LDT=\u5340\u6bb5\u63cf\u8ff0\u7b26\u8868
+IDT=\u4e2d\u65b7\u63cf\u8ff0\u7b26\u8868
+Register=\u5bc4\u5b58\u5668
+Bochs_control=Bochs\u63a7\u5236
+History=\u6b77\u53f2
+Paging=\u5206\u9801
+Table_translate=\u8868\u7ffb\u8b6f
+Instruction=\u6307\u4ee4
+Breakpoint=\u65b7\u9ede
 Bochs=Bochs
-Stack=堆棧
+Stack=\u5806\u68e7
 
-File=文件
-Exit=退出
-Start_bochs=開始Bochs
-Stop_bochs=停止Bochs
-Run_bochs=運行Bochs
-Pause_bochs=暫停Bochs
-Update_bochs_status=更新Bochs狀態
+File=\u6587\u4ef6
+Exit=\u9000\u51fa
+Start=\u958b\u59cbvm
+Stop=\u505c\u6b62vm
+Run_bochs=\u904b\u884cBochs
+Pause_bochs=\u66ab\u505cBochs
+Update_bochs_status=\u66f4\u65b0Bochs\u72c0\u614b
 
-Font=字體
-Size=大小
+Font=\u5b57\u9ad4
+Size=\u5927\u5c0f
 
-Language=語言
-English=英語
-Traditional_chinese=繁體中文
-Simplified_chinese=簡體中文
+Language=\u8a9e\u8a00
+English=\u82f1\u8a9e
+Traditional_chinese=\u7e41\u9ad4\u4e2d\u6587
+Simplified_chinese=\u7c21\u9ad4\u4e2d\u6587
 
-Help=幫助
-About_us=簡介
+Help=\u5e6b\u52a9
+About_us=\u7c21\u4ecb
 
-Unable_to_start_bochs=無法啟動Bochs
-Unable_to_start_qemu=無法啟動Qemu
+Unable_to_start_bochs=\u7121\u6cd5\u555f\u52d5Bochs
+Unable_to_start_qemu=\u7121\u6cd5\u555f\u52d5Qemu
 
-Step=單步
-Nexti=C單步
-Update=更新
+Step=\u55ae\u6b65
+Nexti=C\u55ae\u6b65
+Update=\u66f4\u65b0
 
-Add=增加
-Del=刪除
-Refresh=刷新
-Enable=啟用
-Disable=禁用
-Save=保存
-Load=載入
-Pause_history=暫停歷史
-Page_directory=分頁目錄
-Page_table=分頁表
-From=從
-To=至
-Offset=偏移量
-String=字符串
-Go=轉到
-Search_memory=搜索記憶體
+Add=\u589e\u52a0
+Del=\u522a\u9664
+Refresh=\u5237\u65b0
+Enable=\u555f\u7528
+Disable=\u7981\u7528
+Save=\u4fdd\u5b58
+Load=\u8f09\u5165
+Pause_history=\u66ab\u505c\u6b77\u53f2
+Page_directory=\u5206\u9801\u76ee\u9304
+Page_table=\u5206\u9801\u8868
+From=\u5f9e
+To=\u81f3
+Offset=\u504f\u79fb\u91cf
+String=\u5b57\u7b26\u4e32
+Go=\u8f49\u5230
+Search_memory=\u641c\u7d22\u8a18\u61b6\u9ad4
 
-Cancel=取消
-Search=搜索
-Finished=完成
-Physical_address =物理地址
-Linear_address =線性地址
-Virtual_address =虛擬地址
-Searching_these_bytes=搜索這些字節
-Bytes=字節
-Clear=清除
-Address_translate=地址轉換
-Convert=轉換
-Segment_no=段號
-PD_No=頁目錄號
-PT_No=頁表號
-Search_address=搜索地址
-Address_type=地址類型
-Error=錯誤
-PauseBochsExe=請把PauseBochs.exe和StopBochs.exe放在和peter-bochs-debugger.jar同一個的目錄下
-NdisasmExe=請把ndisasm.exe放在和peter-bochs-debugger.jar同一個的目錄下
-Hit=命中次數
-No=號數
-Title=通用內核調試器
-Address=地址
-Instruction=指令
-Bytes=字節
-Line=行號
-Source=源代碼
-Real_mode=實模式
-Protected_mode=保護模式
-Latest_version_available=最新版本可以下載
-Download_url=下載地址
-ELF_dump=ELF解碼
-Field=字段
-Value=值
-Base_address=基地址
-PDE=頁目錄
-PTE=頁表項
-Dump_page_directory=解碼頁目錄
-Descriptor=描述符表
-Info=信息
-Setting=設定
-Fast_Step=快速單步
-Load_breakpoint_at_startup=啟動時加載斷點
-Update_status_after_bochs_command=輸入bochs命令後更新所有狀態
-What_panel_will_update_after_fast_step_button=“快速單步”按鈕更新以下狀態
-Tips_you_specified_a_wrong_path_of_bochs=提示 : 您指定錯誤的bochs路徑
-Tips_you_specified_a_wrong_path_of_qemu=提示 : 您指定錯誤的qemu路徑
-System=系统
-Load_Elf=加载Elf文件
-Step_over=单步越过
-Step_over_10_times=单步越过10次
-Step_over_100_times=单步越过100次
-Step_over_N_times=单步越过N次
-Project=项目
-Functions=函数
-ASM/C=ASM/C代码
-Source=代码
-Raw=原始文件
-Map=图
-Raw_source=原始代码
-Structure=结构
-Profile_and_Sampling=分析&取样
+Cancel=\u53d6\u6d88
+Search=\u641c\u7d22
+Finished=\u5b8c\u6210
+Physical_address =\u7269\u7406\u5730\u5740
+Linear_address =\u7dda\u6027\u5730\u5740
+Virtual_address =\u865b\u64ec\u5730\u5740
+Searching_these_bytes=\u641c\u7d22\u9019\u4e9b\u5b57\u7bc0
+Bytes=\u5b57\u7bc0
+Clear=\u6e05\u9664
+Address_translate=\u5730\u5740\u8f49\u63db
+Convert=\u8f49\u63db
+Segment_no=\u6bb5\u865f
+PD_No=\u9801\u76ee\u9304\u865f
+PT_No=\u9801\u8868\u865f
+Search_address=\u641c\u7d22\u5730\u5740
+Address_type=\u5730\u5740\u985e\u578b
+Error=\u932f\u8aa4
+PauseBochsExe=\u8acb\u628aPauseBochs.exe\u548cStopBochs.exe\u653e\u5728\u548cpeter-bochs-debugger.jar\u540c\u4e00\u500b\u7684\u76ee\u9304\u4e0b
+NdisasmExe=\u8acb\u628andisasm.exe\u653e\u5728\u548cpeter-bochs-debugger.jar\u540c\u4e00\u500b\u7684\u76ee\u9304\u4e0b
+Hit=\u547d\u4e2d\u6b21\u6578
+No=\u865f\u6578
+Title=\u901a\u7528\u5167\u6838\u8abf\u8a66\u5668
+Address=\u5730\u5740
+Instruction=\u6307\u4ee4
+Bytes=\u5b57\u7bc0
+Line=\u884c\u865f
+Source=\u6e90\u4ee3\u78bc
+Real_mode=\u5be6\u6a21\u5f0f
+Protected_mode=\u4fdd\u8b77\u6a21\u5f0f
+Latest_version_available=\u6700\u65b0\u7248\u672c\u53ef\u4ee5\u4e0b\u8f09
+Download_url=\u4e0b\u8f09\u5730\u5740
+ELF_dump=ELF\u89e3\u78bc
+Field=\u5b57\u6bb5
+Value=\u503c
+Base_address=\u57fa\u5730\u5740
+PDE=\u9801\u76ee\u9304
+PTE=\u9801\u8868\u9805
+Dump_page_directory=\u89e3\u78bc\u9801\u76ee\u9304
+Descriptor=\u63cf\u8ff0\u7b26\u8868
+Info=\u4fe1\u606f
+Setting=\u8a2d\u5b9a
+Fast_Step=\u5feb\u901f\u55ae\u6b65
+Load_breakpoint_at_startup=\u555f\u52d5\u6642\u52a0\u8f09\u65b7\u9ede
+Update_status_after_bochs_command=\u8f38\u5165bochs\u547d\u4ee4\u5f8c\u66f4\u65b0\u6240\u6709\u72c0\u614b
+What_panel_will_update_after_fast_step_button=\u201c\u5feb\u901f\u55ae\u6b65\u201d\u6309\u9215\u66f4\u65b0\u4ee5\u4e0b\u72c0\u614b
+Tips_you_specified_a_wrong_path_of_bochs=\u63d0\u793a : \u60a8\u6307\u5b9a\u932f\u8aa4\u7684bochs\u8def\u5f91
+Tips_you_specified_a_wrong_path_of_qemu=\u63d0\u793a : \u60a8\u6307\u5b9a\u932f\u8aa4\u7684qemu\u8def\u5f91
+System=\u7cfb\u7edf
+Load_Elf=\u52a0\u8f7dElf\u6587\u4ef6
+Step_over=\u5355\u6b65\u8d8a\u8fc7
+Step_over_10_times=\u5355\u6b65\u8d8a\u8fc710\u6b21
+Step_over_100_times=\u5355\u6b65\u8d8a\u8fc7100\u6b21
+Step_over_N_times=\u5355\u6b65\u8d8a\u8fc7N\u6b21
+Project=\u9879\u76ee
+Functions=\u51fd\u6570
+ASM/C=ASM/C\u4ee3\u7801
+Source=\u4ee3\u7801
+Raw=\u539f\u59cb\u6587\u4ef6
+Map=\u56fe
+Raw_source=\u539f\u59cb\u4ee3\u7801
+Structure=\u7ed3\u6784
+Profile_and_Sampling=\u5206\u6790&\u53d6\u6837
