--- a/src/main/resources/language_en_US.properties
+++ b/src/main/resources/language_en_US.properties
@@ -18,9 +18,9 @@ File=File
 Exit=Exit
 Start=Start
 Stop=Stop
-Run_bochs=Run
-Pause_bochs=Pause
-Update_bochs_status=Update status
+run=Run
+pause=Pause
+update_status=Update status
 
 Font=Font
 Size=Size
