--- a/src/main/resources/language_en_US.properties
+++ b/src/main/resources/language_en_US.properties
@@ -74,8 +74,8 @@ PT_No=PT no.
 Search_address=Search address
 Address_type=Address type
 Error=Error
-PauseBochsExe=Please put PauseBochs.exe and StopBochs.exe to the same directory of peter-bochs-debugger.jar
-NdisasmExe=Please put ndisasm.exe to the same directory of peter-bochs-debugger.jar
+PauseBochsExe=Please put PauseBochs.exe and StopBochs.exe to the same directory of gkd.jar
+NdisasmExe=Please put ndisasm.exe to the same directory of gkd.jar
 Hit=Hit
 No=No
 Title=General Kernel Debugger
