--- a/src/main/resources/language_KR.properties
+++ b/src/main/resources/language_KR.properties
@@ -1,118 +1,122 @@
 Disassemble=Disasm 
 
-Memory=메모리 
+Memory=\uba54\ubaa8\ub9ac 
 GDT=GDT 
 LDT=LDT
 IDT=IDT
-Register=등록 
-Bochs_control=Bochs 제어 
-History=역사 
-Paging=페이징 
-Table_translate=테이블 번역 
-Instruction=명령 
-Breakpoint=중단점 
+Register=\ub4f1\ub85d 
+Bochs_control=Bochs \uc81c\uc5b4 
+History=\uc5ed\uc0ac 
+Paging=\ud398\uc774\uc9d5 
+Table_translate=\ud14c\uc774\ube14 \ubc88\uc5ed 
+Instruction=\uba85\ub839 
+Breakpoint=\uc911\ub2e8\uc810 
 Bochs=Bochs 
-Stack=스택 
+Stack=\uc2a4\ud0dd 
 
-File=파일 
-Exit=종료 
-Start=시작vm 
-Stop=중지vm 
-Run_bochs=실행 bochs 
-Pause_bochs=일시 정지 bochs 
-Update_bochs_status=업데이트 상태를 bochs 
+File=\ud30c\uc77c 
+Exit=\uc885\ub8cc 
+Start=\uc2dc\uc791vm 
+Stop=\uc911\uc9c0vm 
+Run_bochs=\uc2e4\ud589 bochs 
+Pause_bochs=\uc77c\uc2dc \uc815\uc9c0 bochs 
+Update_bochs_status=\uc5c5\ub370\uc774\ud2b8 \uc0c1\ud0dc\ub97c bochs 
 
-Font=글꼴 
-Size=크기 
+Font=\uae00\uaf34 
+Size=\ud06c\uae30 
 
-Language=언어 
-English=영어 
-Traditional_chinese=전통 중국어 
-Simplified_chinese=중국어 중국어 
+Language=\uc5b8\uc5b4 
+English=\uc601\uc5b4 
+Traditional_chinese=\uc804\ud1b5 \uc911\uad6d\uc5b4 
+Simplified_chinese=\uc911\uad6d\uc5b4 \uc911\uad6d\uc5b4 
 
-Help=도움말 
-About_us=소개 
+Help=\ub3c4\uc6c0\ub9d0 
+About_us=\uc18c\uac1c 
 
-Unable_to_start_bochs=bochs를 시작할 수없습니다 
-Unable_to_start_qemu=qemu를 시작할 수없습니다 
+Unable_to_start_bochs=bochs\ub97c \uc2dc\uc791\ud560 \uc218\uc5c6\uc2b5\ub2c8\ub2e4 
+Unable_to_start_qemu=qemu\ub97c \uc2dc\uc791\ud560 \uc218\uc5c6\uc2b5\ub2c8\ub2e4 
 
-Step=단계 
-Update=업데이트 
+Step=\ub2e8\uacc4 
+Nexti=Next
+Update=\uc5c5\ub370\uc774\ud2b8 
 
-Add=추가 
-Del=델 
-Refresh=새로고침 
-Enable=활성화 
-Disable=사용 안 함 
-Save=할인 
-Load=불러오기 
-Pause_history=일시 정지의 역사 
-Page_directory=페이지 디렉토리 
-Page_table=페이지 테이블 
-From=부터부터 
-To=위하여
-Offset=오프셋
-String=문자열 
-Go=이동
-Search_memory=검색 메모리 
+Add=\ucd94\uac00 
+Del=\ub378 
+Refresh=\uc0c8\ub85c\uace0\uce68 
+Enable=\ud65c\uc131\ud654 
+Disable=\uc0ac\uc6a9 \uc548 \ud568 
+Save=\ud560\uc778 
+Load=\ubd88\ub7ec\uc624\uae30 
+Pause_history=\uc77c\uc2dc \uc815\uc9c0\uc758 \uc5ed\uc0ac 
+Page_directory=\ud398\uc774\uc9c0 \ub514\ub809\ud1a0\ub9ac 
+Page_table=\ud398\uc774\uc9c0 \ud14c\uc774\ube14 
+From=\ubd80\ud130\ubd80\ud130 
+To=\uc704\ud558\uc5ec
+Offset=\uc624\ud504\uc14b
+String=\ubb38\uc790\uc5f4 
+Go=\uc774\ub3d9
+Search_memory=\uac80\uc0c9 \uba54\ubaa8\ub9ac 
 
-Cancel=취소 
-Search=검색 
-Finished=완료
-Physical_address=실제 주소 
-Linear_address=선형 주소 
-Virtual_address=가상 주소 
-Searching_these_bytes=검색이러한바이트
-Bytes=바이트 
-Clear=지우기 
-Address_translate=주소변환 
-Convert=변환 
-Segment_no=세그먼트번호
+Cancel=\ucde8\uc18c 
+Search=\uac80\uc0c9 
+Finished=\uc644\ub8cc
+Physical_address=\uc2e4\uc81c \uc8fc\uc18c 
+Linear_address=\uc120\ud615 \uc8fc\uc18c 
+Virtual_address=\uac00\uc0c1 \uc8fc\uc18c 
+Searching_these_bytes=\uac80\uc0c9\uc774\ub7ec\ud55c\ubc14\uc774\ud2b8
+Bytes=\ubc14\uc774\ud2b8 
+Clear=\uc9c0\uc6b0\uae30 
+Address_translate=\uc8fc\uc18c\ubcc0\ud658 
+Convert=\ubcc0\ud658 
+Segment_no=\uc138\uadf8\uba3c\ud2b8\ubc88\ud638
 PD_No=PD_No
 PT_No=PT_No 
-Search_address=검색 주소 
-Address_type=주소입력 
-Error=오류 
+Search_address=\uac80\uc0c9 \uc8fc\uc18c 
+Address_type=\uc8fc\uc18c\uc785\ub825 
+Error=\uc624\ub958 
 PauseBochsExe=Please put PauseBochs.exe and StopBochs.exe to the same directory of peter-bochs-debugger.jar
 NdisasmExe=Please put ndisasm.exe to the same directory of peter-bochs-debugger.jar
-Hit=치다 
-No=번호
+Hit=\uce58\ub2e4 
+No=\ubc88\ud638
 Title=General Kernel Debugger
-Address=주소 
-Instruction=명령 
-Bytes=바이트 
-Line=선 
-Source=소스 
+Address=\uc8fc\uc18c 
+Instruction=\uba85\ub839 
+Bytes=\ubc14\uc774\ud2b8 
+Line=\uc120 
+Source=\uc18c\uc2a4 
 Real_mode=Real mode
 Protected_mode=Protected mode
-Latest_version_available=최신버전을사용할수 
-Download_url=다운로드URL 
-ELF_dump=ELF를 덤프 
-Field=필드 
-Value=값 
-Base_address=기본 주소 
+Latest_version_available=\ucd5c\uc2e0\ubc84\uc804\uc744\uc0ac\uc6a9\ud560\uc218 
+Download_url=\ub2e4\uc6b4\ub85c\ub4dcURL 
+ELF_dump=ELF\ub97c \ub364\ud504 
+Field=\ud544\ub4dc 
+Value=\uac12 
+Base_address=\uae30\ubcf8 \uc8fc\uc18c 
 PDE=PDE 
 PTE=PTE
-Dump_page_directory=덤프 디렉토리 페이지 
-Descriptor=설명자 
-Info=정보
-Setting=설정
-Fast_Step = 빠른 단계
-Load_breakpoint_at_startup = 부트로드 중단점
-Update_status_after_bochs_command = 입력 bochs 명령은 모든 상태를 업데이 트하려면
-What_panel_will_update_after_fast_step_button는 = "빠른"다음 상태를 업데이 트하는 단추 단계
-Tips_you_specified_a_wrong_path_of_qemu=팁 : 당신이 qemu의 잘못된 경로를 지정
-System=System
+Dump_page_directory=\ub364\ud504 \ub514\ub809\ud1a0\ub9ac \ud398\uc774\uc9c0 
+Descriptor=\uc124\uba85\uc790 
+Info=\uc815\ubcf4
+Setting=\uc124\uc815
+Fast_Step = \ube60\ub978 \ub2e8\uacc4
+Load_breakpoint_at_startup = \ubd80\ud2b8\ub85c\ub4dc \uc911\ub2e8\uc810
+Update_status_after_bochs_command = \uc785\ub825 bochs \uba85\ub839\uc740 \ubaa8\ub4e0 \uc0c1\ud0dc\ub97c \uc5c5\ub370\uc774 \ud2b8\ud558\ub824\uba74
+What_panel_will_update_after_fast_step_button\ub294 = "\ube60\ub978"\ub2e4\uc74c \uc0c1\ud0dc\ub97c \uc5c5\ub370\uc774 \ud2b8\ud558\ub294 \ub2e8\ucd94 \ub2e8\uacc4
+Tips_you_specified_a_wrong_path_of_bochs=\ud301 : \ub2f9\uc2e0\uc740 Bochs\uc640\uc758 \uc798\ubabb\ub41c \uacbd\ub85c\ub97c \uc9c0\uc815
+Tips_you_specified_a_wrong_path_of_qemu=\ud301 : \ub2f9\uc2e0\uc774 qemu\uc758 \uc798\ubabb\ub41c \uacbd\ub85c\ub97c \uc9c0\uc815
+System=\uccb4\uacc4
 Load_Elf=Load Elf
 Step_over=Step over
 Step_over_10_times=Step over 10 times
 Step_over_100_times=Step over 100 times
 Step_over_N_times=Step over N times
-Project=Project
-Functions=Functions
+Project=\uacc4\ud68d
+Functions=\uae30\ub2a5
 ASM/C=ASM/C
+Source=\ucd9c\ucc98
 Raw=Raw
-Map=Map
+Map=\uc9c0\ub3c4
 Raw_source=Raw files
-Structure=Structure
+Structure=\uad6c\uc870
 Profile_and_Sampling=Profiling & sampling
+General=\uae30\ubcf8
