--- a/src/main/resources/language_en_US.properties
+++ b/src/main/resources/language_en_US.properties
@@ -80,6 +80,8 @@ Hit=Hit
 No=No
 Title=General Kernel Debugger
 Address=Address
+Instruction=Instruction
+Bytes=Bytes
 Line=Line
 Source=Source
 Real_mode=Real mode
@@ -111,8 +113,10 @@ Step_over_N_times=Step over N times
 Project=Project
 Functions=Functions
 ASM/C=ASM/C
+Source=Source
 Raw=Raw
 Map=Map
 Raw_source=Raw files
 Structure=Structure
 Profile_and_Sampling=Profiling & sampling
+General=General
