--- a/src/main/resources/language_zh_CN.properties
+++ b/src/main/resources/language_zh_CN.properties
@@ -1,6 +1,6 @@
 Disassemble=\u53cd\u6c47\u7f16
 
-Memory=\u5185\u5b58
+Memory=\u8bb0\u5fc6\u4f53
 GDT=\u5168\u57df\u63cf\u8ff0\u7b26\u8868
 LDT=\u533a\u6bb5\u63cf\u8ff0\u7b26\u8868
 IDT=\u4e2d\u65ad\u63cf\u8ff0\u7b26\u8868
@@ -55,14 +55,14 @@ To=\u81f3
 Offset=\u504f\u79fb\u91cf
 String=\u5b57\u7b26\u4e32
 Go=\u8f6c\u5230
-Search_memory=\u641c\u7d22\u5185\u5b58
+Search_memory=\u641c\u7d22\u8bb0\u5fc6\u4f53
 
 Cancel=\u53d6\u6d88
 Search=\u641c\u7d22
 Finished=\u5b8c\u6210
-Physical_address=\u7269\u7406\u5730\u5740
-Linear_address=\u7ebf\u6027\u5730\u5740
-Virtual_address=\u865a\u62df\u5730\u5740
+Physical_address =\u7269\u7406\u5730\u5740
+Linear_address =\u7ebf\u6027\u5730\u5740
+Virtual_address =\u865a\u62df\u5730\u5740
 Searching_these_bytes=\u641c\u7d22\u8fd9\u4e9b\u5b57\u8282
 Bytes=\u5b57\u8282
 Clear=\u6e05\u9664
@@ -80,13 +80,13 @@ Hit=\u547d\u4e2d\u6b21\u6570
 No=\u53f7\u6570
 Title=\u901a\u7528\u5185\u6838\u8c03\u8bd5\u5668
 Address=\u5730\u5740
+Instruction=\u6307\u4ee4
+Bytes=\u5b57\u8282
 Line=\u884c\u53f7
-Source=\u4ee3\u7801
+Source=\u6e90\u4ee3\u7801
 Real_mode=\u5b9e\u6a21\u5f0f
 Protected_mode=\u4fdd\u62a4\u6a21\u5f0f
 Latest_version_available=\u6700\u65b0\u7248\u672c\u53ef\u4ee5\u4e0b\u8f7d
-Download_url=\u4e0b\u8f7d\u5730\u5740
-ELF_dump=ELF\u89e3\u7801
 Download_url=\u4e0b\u8f7d\u5730\u5740
 ELF_dump=ELF\u89e3\u7801
 Field=\u5b57\u6bb5
@@ -100,7 +100,7 @@ Info=\u4fe1\u606f
 Setting=\u8bbe\u5b9a
 Fast_Step=\u5feb\u901f\u5355\u6b65
 Load_breakpoint_at_startup=\u542f\u52a8\u65f6\u52a0\u8f7d\u65ad\u70b9
-Update_status_after_bochs_command=\u8f93\u5165bochs\u547d\u4ee4\u540e\u66f4\u65b0\u6240\u6709\u72b6\u6001
+Update_status_after_bochs_command=\u8f93\u5165bochs\u547d\u4ee4\u5f8c\u66f4\u65b0\u6240\u6709\u72b6\u6001
 What_panel_will_update_after_fast_step_button=\u201c\u5feb\u901f\u5355\u6b65\u201d\u6309\u94ae\u66f4\u65b0\u4ee5\u4e0b\u72b6\u6001
 Tips_you_specified_a_wrong_path_of_bochs=\u63d0\u793a : \u60a8\u6307\u5b9a\u9519\u8bef\u7684bochs\u8def\u5f84
 Tips_you_specified_a_wrong_path_of_qemu=\u63d0\u793a : \u60a8\u6307\u5b9a\u9519\u8bef\u7684qemu\u8def\u5f84
@@ -119,3 +119,4 @@ Map=\u56fe
 Raw_source=\u539f\u59cb\u4ee3\u7801
 Structure=\u7ed3\u6784
 Profile_and_Sampling=\u5206\u6790&\u53d6\u6837
+General=\u57fa\u672c
