--- a/src/main/resources/language_zh_TW.properties
+++ b/src/main/resources/language_zh_TW.properties
@@ -119,3 +119,4 @@ Map=\u56fe
 Raw_source=\u539f\u59cb\u4ee3\u7801
 Structure=\u7ed3\u6784
 Profile_and_Sampling=\u5206\u6790&\u53d6\u6837
+General=\u57fa\u672c
