--- a/src/main/resources/language_JP.properties
+++ b/src/main/resources/language_JP.properties
@@ -37,6 +37,7 @@ Unable_to_start_bochs=bochs\u3092\u8d77\u52d5\u3059\u308b\u3053\u3068\u304c\u306
 Unable_to_start_qemu=qemu\u3092\u8d77\u52d5\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093 
 
 Step=\u30b9\u30c6\u30c3\u30d7 
+Nexti=Next
 Update=\u66f4\u65b0 
 
 Add=\u8ffd\u52a0 
@@ -118,3 +119,4 @@ Map=Map
 Raw_source=Raw\u30bd\u30fc\u30b9\u30b3\u30fc\u30c9
 Structure=\u69cb\u9020
 Profile_and_Sampling=\u30d7\u30ed\u30d5\u30a1\u30a4\u30ea\u30f3\u30b0
+General=\u57fa\u672c
