--- a/instrument/README
+++ b/instrument/README
@@ -1,5 +1,10 @@
+Use this command to config your bochs to use this instrument stub:
+	$CXXFLAGS=-O3 ./configure --prefix=/toolchain/ --enable-debugger --enable-disasm --disable-debugger-gui --with-rfb --disable-readline --enable-all-optimizations --enable-fpu --enable-show-ips --enable-instrumentation=instrument/gkd --with-vncsrv --with-sdl2
+
 Author : Peter Cheung (mcheung63@hotmail.com)
 
 2011/07/17 bochs changed the instrument again, if you are using the bochs before 2011 June, please rename instrument_old.cc to instrument.cc , rename instrument_old.h to instrument.h
 
 2014/12/15 GKD seems stable, porting the old peter-bochs instrument code
+
+
