--- a/instrument/README
+++ b/instrument/README
@@ -1,5 +1,5 @@
 Use this command to config your bochs to use this instrument stub:
-	$CXXFLAGS=-O3 ./configure --prefix=/toolchain/ --enable-debugger --enable-disasm --disable-debugger-gui --with-rfb --disable-readline --with-sdl2 --enable-all-optimizations --enable-fpu --enable-show-ips --enable-instrumentation=instrument/gkd
+	$CFLAGS=-O3 CXXFLAGS=-O3 ./configure --prefix=/toolchain/ --enable-debugger --enable-disasm --disable-debugger-gui --with-rfb --disable-readline --with-sdl2 --enable-all-optimizations --enable-fpu --enable-show-ips --enable-instrumentation=instrument/gkd
 
 Author : Peter Cheung (mcheung63@hotmail.com)
 
