--- a/instrument/README
+++ b/instrument/README
@@ -1,6 +1,9 @@
 Use this command to config your bochs to use this instrument stub:
 	$CFLAGS=-O3 CXXFLAGS=-O3 ../bochs/configure --prefix=/toolchain/ --enable-debugger --enable-disasm --disable-debugger-gui --with-rfb --disable-readline --with-sdl2 --enable-all-optimizations --enable-fpu --enable-show-ips --enable-instrumentation=instrument/gkd
 
+	debug:
+	$CFLAGS="-O3 -g" CXXFLAGS="-O3 -g" ../bochs/configure --prefix=/toolchain/ --enable-debugger --enable-disasm --disable-debugger-gui --with-rfb --disable-readline --with-sdl2 --enable-all-optimizations --enable-fpu --enable-show-ips --enable-instrumentation=instrument/gkd
+
 Author : Peter Cheung (mcheung63@hotmail.com)
 
 2011/07/17 bochs changed the instrument again, if you are using the bochs before 2011 June, please rename instrument_old.cc to instrument.cc , rename instrument_old.h to instrument.h
